--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,9 @@
     "cSpell.words": [
         "conv",
         "Convo",
-        "datetime",
         "Dellastro",
         "handelclick",
         "ptable"
-    ]
+    ],
+    "liveServer.settings.port": 5501
 }
